--- a/fps_dfs_optimizer/analyses/run_generator.ipynb
+++ b/fps_dfs_optimizer/analyses/run_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_limit_general = 3\n",
+    "projections_path = 'C:\\\\Users\\\\Jack\\\\Desktop\\\\proj\\\\20211222.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -154,14 +164,63 @@
        "4              38.0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_players = get_players_from_salaries('C:\\\\Users\\\\Jack\\\\Desktop\\\\proj\\\\20211222.csv')\n",
+    "df_players = get_players_from_salaries(projections_path)\n",
     "df_players.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'DAL': 3,\n",
+       " 'DET': 3,\n",
+       " 'IND': 3,\n",
+       " 'LAL': 3,\n",
+       " 'MIA': 3,\n",
+       " 'MIN': 3,\n",
+       " 'NOP': 3,\n",
+       " 'NYK': 3,\n",
+       " 'PHX': 3,\n",
+       " 'POR': 3}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "team_limit = {t: team_limit_general for t in df_players['TeamAbbrev'].unique()}\n",
+    "team_limit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_limit['DAL'] = 1\n",
+    "team_limit['DET'] = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_limit"
    ]
   },
   {
@@ -1381,8 +1440,8 @@
     }
    ],
    "source": [
-    "gen.generate_n_lineups(200, order=False, team_limits=None)\n",
-    "# gen.generate_n_minutes(5, order=False, team_limits=None)"
+    "gen.generate_n_lineups(200, order=False, team_limits=None, team_limits=team_limit)\n",
+    "# gen.generate_n_minutes(5, order=False, team_limits=None, team_limits=team_limit)"
    ]
   },
   {
